        --------------------------------------------------

This file should be used to summarize modifications introduced in the
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

18 July 2015 V.Ivanchenko (hadr-cross-V10-00-22)
-------------------------
- G4NeutronInelasticXS, G4NeutronCaptureXS - fixed isotope cross 
    including retrieve, data management, isotope x-section and 
    isotope selection (the problem was reported by Steve Quillin
    and analyzed by Tatsumi Koi).

27 May 2015  A.Ribon      (hadr-cross-V10-00-20)
---------------------------------------------------
- G4ComponentGGHadronNucleusXsc : Grichine's extension of applicability
  for kaons down to 0.1*MeV

06 February 2015 W.Pokorski (hadr-cross-V10-00-19)
------------------------------------------------
- including V.Grishine change in G4ComponentGGHadronNucleusXsc to work
  for H target

07 January 2015 W.Pokorski
--------------------------
- removing obsolete (wrong) checks for particle types in IsIsoApplicable
  in Chips cross sections

12 December 2014 G.Cosmo
------------------------
- Workaround in G4CrossSectionFactory<T,2>::Instantiate() to allow for
  compilation on clang-3.5 on Linux, for initialisation of TLS pointer.

18 November 2014 V.Ivanchenko (hadr-cross-V10-00-18)
---------------------------------------------------
- G4CrossSectionDataSetRegistry, G4CrossSectionFactoryRegistry,
  G4HadronCrossSections - use thread local singletone for
  proper deletion of cross sections end of run

07 November 2014 V.Grichine (hadr-cross-V10-00-17)
---------------------------------------------------
- Class managing single diffraction to elastic cross section ratio
  G4DiffElasticRatio 

30 October 2014 V.Ivanchenko (hadr-cross-V10-00-16)
---------------------------------------------------