@@ -14,6 +14,18 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+10 August 2015 V.Ivanchenko (hadr-cross-V10-00-23)
+--------------------------------------------------
+- G4NeutronCaptureXS - fixed Coverity warning
+
+18 July 2015 V.Ivanchenko
+-----------------------------------------------
+  Fix previous tag and removed debug cout
+
+18 July 2015 V.Ivanchenko
+-----------------------------------------------
+  Cleanup previous tag
+
 18 July 2015 V.Ivanchenko (hadr-cross-V10-00-22)
 -------------------------
 - G4NeutronInelasticXS, G4NeutronCaptureXS - fixed isotope cross 
